--- a/pom.xml
+++ b/pom.xml
@@ -41,7 +41,14 @@
     <artifactId>sqlite-jdbc</artifactId>
     <version>3.20.1</version>
 </dependency>
-    <dependency>
+      <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+      <dependency>
+          <groupId>mysql</groupId>
+          <artifactId>mysql-connector-java</artifactId>
+          <version>8.0.32</version>
+      </dependency>
+
+      <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>4.11</version>
